Make sure "restrict by tag" dropdown doesn't go off-screen

--- a/extensions/tags/less/admin/extension.less
+++ b/extensions/tags/less/admin/extension.less
@@ -4,3 +4,8 @@
 @import "TagsPage.less";
 @import "EditTagModal.less";
 @import "TagSettingsModal.less";
+
+.Dropdown--restrictByTag .Dropdown-menu {
+  max-height: 400px;
+  overflow: auto;
+}
